--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "polytope-examples"]
-	path = polytope-examples
-	url = git@github.com:destination-earth-digital-twins/polytope-examples.git
+[submodule "test"]
+	path = test
+	url = https://github.com/alicemont1/test
